testsuite/tests/package/package08e.stderr

package08e.hs:2:1: error:
    Failed to load interface for ‘MyHsTypes’
    Use -v to see a list of the files searched for.

package08e.hs:3:1: error:
    Failed to load interface for ‘HsTypes’
    Use -v to see a list of the files searched for.

package08e.hs:4:1: error:
    Failed to load interface for ‘HsUtils’
    Use -v to see a list of the files searched for.

package08e.hs:5:1: error:
    Failed to load interface for ‘UniqFM’
    Use -v to see a list of the files searched for.
